--- a/source/syslog.conf
+++ b/source/syslog.conf
@@ -3,10 +3,10 @@
 "REISERFS.*using ordered", "gray", "white"
 "REISERFS.*journal params", "gray", "white"
 "REISERFS.*r5 hash", "gray", "white"
-"REISERFS.*checking transaction log \(md[0-9]*\)", "gray", "white"
+"REISERFS.*checking transaction log \(md[0-99]*\)", "gray", "white"
 "xfs", "gray", "white"
 "btrfs", "gray", "white"
-"mkdir /mnt/disk", "gray", "white"
+"mkdir[ -p| ]/mnt/disk", "gray", "white"
 "scst_", "gray", "white"
 "sending DHCP_REQUEST for", "gray", "white"
 "dhcpIPaddrLeaseTime=[0-9]* in DHCP server response.", "gray", "white"
@@ -17,6 +17,8 @@
 "kernel:[ \t]*$", "gray", "white"
 "rdevNumErrors\.[0-9]*=0", "gray", "white"
 "sas eh calling libata port error handler", "gray", "white"
+"kvm:", "gray", "white"
+"docker[0-9]", "gray", "white"
 "[ \t]terror", "black", "white"
 "sas: ata[0-99].*dev error handler", "teal", "white"
 " ACPI Error ", "orange", "black"
@@ -30,7 +32,7 @@
 "error", "red", "white"
 "Emask ", "red", "white"
 "parity incorrect", "red", "white"
-"Fsck?", "red", "white"
+"Fsck", "red", "white"
 "invalid opcode: ", "red", "white"
 "nobody cared", "red", "white"
 "Unknown boot option", "red", "white"
@@ -57,13 +59,14 @@
 ": replayed ", "orange", "black"
 "duplicate object", "orange", "black"
 " checksum", "orange", "black"
+"conflicts", "orange", "white"
 "warning", "orange", "black"
 "conflicts", "orange", "black"
 "kill", "orange", "black"
 "power failure", "orange", "black"
 "power is back", "orange", "black"
 ": unRAID System", "lime", "black"
-"Lime Tech", "lime", "black"
+"Lime[ -]Tech", "lime", "black"
 "key detected, registered", "lime", "black"
 ": Unregistered", "lime", "black"
 "Linux version", "blue", "white"
@@ -93,6 +96,7 @@
 "PS/2", "blue", "white"
 "keyboard]", "blue", "white"
 "driver", "blue", "white"
+"chip", "blue", "white"
 "Device inventory:", "teal", "white"
 ": pci-", "teal", "white"
 ", ATA DISK drive", "teal", "white"
@@ -130,6 +134,7 @@
 " bcm5700[ :]", "purple", "white"
 " sk98lin[ :]", "purple", "white"
 "dhcp", "purple", "white"
+"bond[0-9]", "purple", "white"
 "eth[0-99]", "purple", "white"
 "ROOT LOGIN ", "olive", "white"
 "invalid password", "olive", "white"
