--- a/source/syslog.conf
+++ b/source/syslog.conf
@@ -28,7 +28,7 @@
 "HPA detected: current [0-99]*168,", "black", "white"
 "kernel:  \[mem .* page ", "black", "white"
 "get value of subfeature", "blue", "white"
-"preclear_disk", "brown", "white"
+"preclear_disk", "gray", "white"
 "error", "red", "white"
 "Emask ", "red", "white"
 "parity incorrect", "red", "white"
