--- a/source/syslog.conf
+++ b/source/syslog.conf
@@ -1,9 +1,5 @@
 "spin[up|down]", "gray", "white"
-"REISERFS.*standard journal", "gray", "white"
-"REISERFS.*using ordered", "gray", "white"
-"REISERFS.*journal params", "gray", "white"
-"REISERFS.*r5 hash", "gray", "white"
-"REISERFS.*checking transaction log \(md[0-99]*\)", "gray", "white"
+"reiserfs", "gray", "white"
 "xfs", "gray", "white"
 "btrfs", "gray", "white"
 "mkdir[ -p| ]/mnt/disk", "gray", "white"
@@ -22,7 +18,6 @@
 "[ \t]terror", "black", "white"
 "sas: ata[0-99].*dev error handler", "teal", "white"
 " ACPI Error ", "orange", "black"
-"read_file: error 2 opening /boot/config/super.dat", "green", "white"
 "ntpd.*Listening on interface", "purple", "white"
 "checksumming", "blue", "white"
 "HPA detected: current [0-99]*168,", "black", "white"
@@ -59,7 +54,7 @@
 ": replayed ", "orange", "black"
 "duplicate object", "orange", "black"
 " checksum", "orange", "black"
-"conflicts", "orange", "white"
+"conflicts", "orange", "black"
 "warning", "orange", "black"
 "conflicts", "orange", "black"
 "kill", "orange", "black"
