--- a/source/syslog.conf
+++ b/source/syslog.conf
@@ -1,8 +1,8 @@
-"spin[up|down]", "gray", "white"
+"(spinup|spindown)", "gray", "white"
 "reiserfs", "gray", "white"
 "xfs", "gray", "white"
 "btrfs", "gray", "white"
-"mkdir[ -p| ]/mnt/disk", "gray", "white"
+"mkdir[ -p| ]\/mnt\/disk", "gray", "white"
 "scst_", "gray", "white"
 "sending DHCP_REQUEST for", "gray", "white"
 "dhcpIPaddrLeaseTime=[0-9]* in DHCP server response.", "gray", "white"
@@ -16,22 +16,22 @@
 "kvm:", "gray", "white"
 "docker[0-9]", "gray", "white"
 "[ \t]terror", "black", "white"
-"sas: ata[0-99].*dev error handler", "teal", "white"
+"sas: ata[0-9].*dev error handler", "teal", "white"
 " ACPI Error ", "orange", "black"
 "ntpd.*Listening on interface", "purple", "white"
 "checksumming", "blue", "white"
-"HPA detected: current [0-99]*168,", "black", "white"
+"HPA detected: current [0-9]*168,", "black", "white"
 "kernel:  \[mem .* page ", "black", "white"
 "get value of subfeature", "blue", "white"
 "preclear_disk", "gray", "white"
 "error", "red", "white"
 "Emask ", "red", "white"
 "parity incorrect", "red", "white"
-"Fsck", "red", "white"
+"Fsck?", "red", "white"
 "invalid opcode: ", "red", "white"
 "nobody cared", "red", "white"
 "Unknown boot option", "red", "white"
-"ata[0-99\. ]+: disabled", "red", "white"
+"ata[0-9\. ]+: disabled", "red", "white"
 "DMA disabled", "red", "white"
 "kernel BUG ", "red", "white"
 "Write Protect is on", "red", "white"
@@ -50,7 +50,7 @@
 "[soft|hard] resetting ", "orange", "black"
 "failed[ ,]", "orange", "black"
 "\<errno=[^0]", "orange", "black"
-" limiting speed to ", "orange", "black"
+" limiting speed to (PIO|UDM)", "orange", "black"
 ": replayed ", "orange", "black"
 "duplicate object", "orange", "black"
 " checksum", "orange", "black"
@@ -67,9 +67,9 @@
 "Linux version", "blue", "white"
 "MHz processor", "blue", "white"
 "CPU: Intel", "blue", "white"
-"CPU[0-99]: Intel", "blue", "white"
+"CPU[0-9]: Intel", "blue", "white"
 "CPU: AMD", "blue", "white"
-"CPU[0-99]: AMD", "blue", "white"
+"CPU[0-9]: AMD", "blue", "white"
 "kernel: Processors: ", "blue", "white"
 "kernel: Memory: ", "blue", "white"
 "kernel: SMP: ", "blue", "white"
@@ -85,13 +85,8 @@
 "found.*chip", "blue", "white"
 "controller", "blue", "white"
 "version ", "blue", "white"
-"mouse", "blue", "white"
-"speaker", "blue", "white"
-"[KBD|AUX] port", "blue", "white"
-"PS/2", "blue", "white"
-"keyboard]", "blue", "white"
+"mouse|speaker|KBD port|AUX port|PS\/2|keyboard]", "blue", "white"
 "driver", "blue", "white"
-"chip", "blue", "white"
 "Device inventory:", "teal", "white"
 ": pci-", "teal", "white"
 ", ATA DISK drive", "teal", "white"
@@ -99,20 +94,15 @@
 " attached scsi disk", "teal", "white"
 " attached scsi removable disk", "teal", "white"
 "SATA link up ", "teal", "white"
-" md[0-99][:) ]", "teal", "white"
-" md1[0-99][:) ]", "teal", "white"
-" md2[0-99][:) ]", "teal", "white"
+" md[0-9][:) ]", "teal", "white"
+" md1[0-9][:) ]", "teal", "white"
+" md2[0-9][:) ]", "teal", "white"
 " [sh]d[a-z]1[: ]", "teal", "white"
 "kernel:  [sh]d[a-z][: ]", "teal", "white"
 " ide[0-9]: [^B]", "teal", "white"
 "hdparm ", "teal", "white"
-"scsi ", "teal", "white"
-"[^d]ata", "teal", "white"
-"sas ", "teal", "white"
-"ahci ", "teal", "white"
-"[^a-z0-99]sd[a-z][^a-z]", "teal", "white"
-"usb", "teal", "white"
-"import disk[0-99]*: ", "teal", "white"
+"scsi "|[^d]ata"|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "teal", "white"
+"import disk[0-9]*: ", "teal", "white"
 "ncq", "teal", "white"
 " mdcmd ", "green", "white"
 " md: ", "green", "white"
@@ -130,10 +120,10 @@
 " sk98lin[ :]", "purple", "white"
 "dhcp", "purple", "white"
 "bond[0-9]", "purple", "white"
-"eth[0-99]", "purple", "white"
+"eth[0-9]", "purple", "white"
 "ROOT LOGIN ", "olive", "white"
 "invalid password", "olive", "white"
-" (in.)?telnetd", "olive", "white"
+"invalid user", "olive", "white"
 "Accepted password", "olive", "white"
 "Failed password", "olive", "white"
 "emhttp[:[_]", "navy", "white"
