--- a/source/syslog.conf
+++ b/source/syslog.conf
@@ -47,7 +47,7 @@
 "HPA", "orange", "black"
 "Host Protected Area", "orange", "black"
 "invalid signature", "orange", "black"
-"[soft|hard] resetting ", "orange", "black"
+"(soft|hard) resetting ", "orange", "black"
 "failed[ ,]", "orange", "black"
 "\<errno=[^0]", "orange", "black"
 " limiting speed to (PIO|UDM)", "orange", "black"
@@ -101,7 +101,7 @@
 "kernel:  [sh]d[a-z][: ]", "teal", "white"
 " ide[0-9]: [^B]", "teal", "white"
 "hdparm ", "teal", "white"
-"scsi "|[^d]ata"|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "teal", "white"
+"scsi |[^d]ata|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "teal", "white"
 "import disk[0-9]*: ", "teal", "white"
 "ncq", "teal", "white"
 " mdcmd ", "green", "white"
