Initial beta release.

--- a/source/syslog.conf
+++ b/source/syslog.conf
@@ -15,13 +15,13 @@
 "sas eh calling libata port error handler", "gray", "white"
 "kvm:", "gray", "white"
 "docker[0-9]", "gray", "white"
-"[ \t]terror", "black", "white"
+"[ \t]terror", "red", "white"
 "sas: ata[0-9].*dev error handler", "teal", "white"
 " ACPI Error ", "orange", "black"
 "ntpd.*Listening on interface", "purple", "white"
 "checksumming", "blue", "white"
-"HPA detected: current [0-9]*168,", "black", "white"
-"kernel:  \[mem .* page ", "black", "white"
+"HPA detected: current [0-9]*168,", "red", "white"
+"kernel:  \[mem .* page ", "red", "white"
 "get value of subfeature", "blue", "white"
 "preclear_disk", "gray", "white"
 "error", "red", "white"
@@ -49,7 +49,7 @@
 "invalid signature", "orange", "black"
 "(soft|hard) resetting ", "orange", "black"
 "failed[ ,]", "orange", "black"
-"\<errno=[^0]", "orange", "black"
+"errno=[^0]", "orange", "black"
 " limiting speed to (PIO|UDM)", "orange", "black"
 ": replayed ", "orange", "black"
 "duplicate object", "orange", "black"
