Initial beta release.
Toned down the colors.

--- a/source/syslog.conf
+++ b/source/syslog.conf
@@ -1,129 +1,131 @@
-"(spinup|spindown)", "gray", "white"
-"reiserfs", "gray", "white"
-"xfs", "gray", "white"
-"btrfs", "gray", "white"
-"mkdir[ -p| ]\/mnt\/disk", "gray", "white"
-"scst_", "gray", "white"
-"sending DHCP_REQUEST for", "gray", "white"
-"dhcpIPaddrLeaseTime=[0-9]* in DHCP server response.", "gray", "white"
-"dhcpT[12]value is missing in DHCP server response.", "gray", "white"
-"DHCP_ACK received from", "gray", "white"
-": connect from [0-9.]*", "gray", "white"
-"ROOT LOGIN  on ", "gray", "white"
-"kernel:[ \t]*$", "gray", "white"
-"rdevNumErrors\.[0-9]*=0", "gray", "white"
-"sas eh calling libata port error handler", "gray", "white"
-"kvm:", "gray", "white"
-"docker[0-9]", "gray", "white"
-"[ \t]terror", "red", "white"
-"sas: ata[0-9].*dev error handler", "teal", "white"
-" ACPI Error ", "orange", "black"
-"ntpd.*Listening on interface", "purple", "white"
-"checksumming", "blue", "white"
-"HPA detected: current [0-9]*168,", "red", "white"
-"kernel:  \[mem .* page ", "red", "white"
-"get value of subfeature", "blue", "white"
-"preclear_disk", "gray", "white"
-"error", "red", "white"
-"Emask ", "red", "white"
-"parity incorrect", "red", "white"
-"Fsck?", "red", "white"
-"invalid opcode: ", "red", "white"
-"nobody cared", "red", "white"
-"Unknown boot option", "red", "white"
-"ata[0-9\. ]+: disabled", "red", "white"
-"DMA disabled", "red", "white"
-"kernel BUG ", "red", "white"
-"Write Protect is on", "red", "white"
-"Call trace", "red", "white"
-"tainted", "red", "white"
-"kernel:  \[", "red", "white"
-"out[ _]of[ _]memory", "red", "white"
-"killed", "red", "white"
-"HPA detected: current [0-9]*055,", "red", "white"
-"ACPI Warning", "orange", "black"
-"ACPI Exception", "orange", "black"
-"spurious", "orange", "black"
-"HPA", "orange", "black"
-"Host Protected Area", "orange", "black"
-"invalid signature", "orange", "black"
-"(soft|hard) resetting ", "orange", "black"
-"failed[ ,]", "orange", "black"
-"errno=[^0]", "orange", "black"
-" limiting speed to (PIO|UDM)", "orange", "black"
-": replayed ", "orange", "black"
-"duplicate object", "orange", "black"
-" checksum", "orange", "black"
-"conflicts", "orange", "black"
-"warning", "orange", "black"
-"conflicts", "orange", "black"
-"kill", "orange", "black"
-"power failure", "orange", "black"
-"power is back", "orange", "black"
-": unRAID System", "lime", "black"
-"Lime[ -]Tech", "lime", "black"
-"key detected, registered", "lime", "black"
-": Unregistered", "lime", "black"
-"Linux version", "blue", "white"
-"MHz processor", "blue", "white"
-"CPU: Intel", "blue", "white"
-"CPU[0-9]: Intel", "blue", "white"
-"CPU: AMD", "blue", "white"
-"CPU[0-9]: AMD", "blue", "white"
-"kernel: Processors: ", "blue", "white"
-"kernel: Memory: ", "blue", "white"
-"kernel: SMP: ", "blue", "white"
-"B HIGHMEM ", "blue", "white"
-"LOWMEM ", "blue", "white"
-"md: xor using", "blue", "white"
-"BogoMIPS", "blue", "white"
-"kernel: Console: ", "blue", "white"
-" Thermal Zone", "blue", "white"
-" Adding [0-9]+k swap on ", "blue", "white"
-"Kernel command line:", "blue", "white"
-"_sse", "blue", "white"
-"found.*chip", "blue", "white"
-"controller", "blue", "white"
-"version ", "blue", "white"
-"mouse|speaker|KBD port|AUX port|PS\/2|keyboard]", "blue", "white"
-"driver", "blue", "white"
-"Device inventory:", "teal", "white"
-": pci-", "teal", "white"
-", ATA DISK drive", "teal", "white"
-"Direct-Access ", "teal", "white"
-" attached scsi disk", "teal", "white"
-" attached scsi removable disk", "teal", "white"
-"SATA link up ", "teal", "white"
-" md[0-9][:) ]", "teal", "white"
-" md1[0-9][:) ]", "teal", "white"
-" md2[0-9][:) ]", "teal", "white"
-" [sh]d[a-z]1[: ]", "teal", "white"
-"kernel:  [sh]d[a-z][: ]", "teal", "white"
-" ide[0-9]: [^B]", "teal", "white"
-"hdparm ", "teal", "white"
-"scsi |[^d]ata|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "teal", "white"
-"import disk[0-9]*: ", "teal", "white"
-"ncq", "teal", "white"
-" mdcmd ", "green", "white"
-" md: ", "green", "white"
-"super.dat ", "green", "white"
-": running, size:", "green", "white"
-"rc.inet1", "purple", "white"
-"forcedeth", "purple", "white"
-" r8169[ :]", "purple", "white"
-" e1000[ :]", "purple", "white"
-" e1000e[ :]", "purple", "white"
-" sky2[ :]", "purple", "white"
-" skge[ :]", "purple", "white"
-" tg3[ :.]", "purple", "white"
-" bcm5700[ :]", "purple", "white"
-" sk98lin[ :]", "purple", "white"
-"dhcp", "purple", "white"
-"bond[0-9]", "purple", "white"
-"eth[0-9]", "purple", "white"
-"ROOT LOGIN ", "olive", "white"
-"invalid password", "olive", "white"
-"invalid user", "olive", "white"
-"Accepted password", "olive", "white"
-"Failed password", "olive", "white"
-"emhttp[:[_]", "navy", "white"
+": #.*","skip"
+": \|.*", "skip"
+"(spinup|spindown)", "#B6B6B4"
+"reiserfs", "#B6B6B4"
+"xfs", "#B6B6B4"
+"btrfs", "#B6B6B4"
+"mkdir[ -p| ]\/mnt\/disk", "#B6B6B4"
+"scst_", "#B6B6B4"
+"sending DHCP_REQUEST for", "#B6B6B4"
+"dhcpIPaddrLeaseTime=[0-9]* in DHCP server response.", "#B6B6B4"
+"dhcpT[12]value is missing in DHCP server response.", "#B6B6B4"
+"DHCP_ACK received from", "#B6B6B4"
+": connect from [0-9.]*", "#B6B6B4"
+"ROOT LOGIN  on ", "#B6B6B4"
+"kernel:[ \t]*$", "#B6B6B4"
+"rdevNumErrors\.[0-9]*=0", "#B6B6B4"
+"sas eh calling libata port error handler", "#B6B6B4"
+"kvm:", "#B6B6B4"
+"docker[0-9]", "#B6B6B4"
+"[ \t]terror", "#FFBABA"
+"sas: ata[0-9].*dev error handler", "#4E8975"
+" ACPI Error ", "#FEEFB3"
+"ntpd.*Listening on interface", "#FF00FF"
+"checksumming", "#ADD8E6"
+"HPA detected: current [0-9]*168,", "#FFBABA"
+"kernel:  \[mem .* page ", "#FFBABA"
+"get value of subfeature", "#ADD8E6"
+"preclear_disk", "#B6B6B4"
+"error", "#FFBABA"
+"Emask ", "#FFBABA"
+"parity incorrect", "#FFBABA"
+"Fsck?", "#FFBABA"
+"invalid opcode: ", "#FFBABA"
+"nobody cared", "#FFBABA"
+"Unknown boot option", "#FFBABA"
+"ata[0-9\. ]+: disabled", "#FFBABA"
+"DMA disabled", "#FFBABA"
+"kernel BUG ", "#FFBABA"
+"Write Protect is on", "#FFBABA"
+"Call trace", "#FFBABA"
+"tainted", "#FFBABA"
+"kernel:  \[", "#FFBABA"
+"out[ _]of[ _]memory", "#FFBABA"
+"killed", "#FFBABA"
+"HPA detected: current [0-9]*055,", "#FFBABA"
+"ACPI Warning", "#FEEFB3"
+"ACPI Exception", "#FEEFB3"
+"spurious", "#FEEFB3"
+"HPA", "#FEEFB3"
+"Host Protected Area", "#FEEFB3"
+"invalid signature", "#FEEFB3"
+"(soft|hard) resetting ", "#FEEFB3"
+"failed[ ,]", "#FEEFB3"
+"errno=[^0]", "#FEEFB3"
+" limiting speed to (PIO|UDM)", "#FEEFB3"
+": replayed ", "#FEEFB3"
+"duplicate object", "#FEEFB3"
+" checksum", "#FEEFB3"
+"conflicts", "#FEEFB3"
+"warning", "#FEEFB3"
+"conflicts", "#FEEFB3"
+"kill", "#FEEFB3"
+"power failure", "#FEEFB3"
+"power is back", "#FEEFB3"
+": unRAID System", "#41A317"
+"Lime[ -]Tech", "#41A317"
+"key detected, registered", "#41A317"
+": Unregistered", "#41A317"
+"Linux version", "#ADD8E6"
+"MHz processor", "#ADD8E6"
+"CPU: Intel", "#ADD8E6"
+"CPU[0-9]: Intel", "#ADD8E6"
+"CPU: AMD", "#ADD8E6"
+"CPU[0-9]: AMD", "#ADD8E6"
+"kernel: Processors: ", "#ADD8E6"
+"kernel: Memory: ", "#ADD8E6"
+"kernel: SMP: ", "#ADD8E6"
+"B HIGHMEM ", "#ADD8E6"
+"LOWMEM ", "#ADD8E6"
+"md: xor using", "#ADD8E6"
+"BogoMIPS", "#ADD8E6"
+"kernel: Console: ", "#ADD8E6"
+" Thermal Zone", "#ADD8E6"
+" Adding [0-9]+k swap on ", "#ADD8E6"
+"Kernel command line:", "#ADD8E6"
+"_sse", "#ADD8E6"
+"found.*chip", "#ADD8E6"
+"controller", "#ADD8E6"
+"version ", "#ADD8E6"
+"mouse|speaker|KBD port|AUX port|PS\/2|keyboard]", "#ADD8E6"
+"driver", "#ADD8E6"
+"Device inventory:", "#4E8975"
+": pci-", "#4E8975"
+", ATA DISK drive", "#4E8975"
+"Direct-Access ", "#4E8975"
+" attached scsi disk", "#4E8975"
+" attached scsi removable disk", "#4E8975"
+"SATA link up ", "#4E8975"
+" md[0-9][:) ]", "#4E8975"
+" md1[0-9][:) ]", "#4E8975"
+" md2[0-9][:) ]", "#4E8975"
+" [sh]d[a-z]1[: ]", "#4E8975"
+"kernel:  [sh]d[a-z][: ]", "#4E8975"
+" ide[0-9]: [^B]", "#4E8975"
+"hdparm ", "#4E8975"
+"scsi |[^d]ata|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "#4E8975"
+"import disk[0-9]*: ", "#4E8975"
+"ncq", "#4E8975"
+" mdcmd ", "#00FF00"
+" md: ", "#00FF00"
+"super.dat ", "#00FF00"
+": running, size:", "#00FF00"
+"rc.inet1", "#FF00FF"
+"forcedeth", "#FF00FF"
+" r8169[ :]", "#FF00FF"
+" e1000[ :]", "#FF00FF"
+" e1000e[ :]", "#FF00FF"
+" sky2[ :]", "#FF00FF"
+" skge[ :]", "#FF00FF"
+" tg3[ :.]", "#FF00FF"
+" bcm5700[ :]", "#FF00FF"
+" sk98lin[ :]", "#FF00FF"
+"dhcp", "#FF00FF"
+"bond[0-9]", "#FF00FF"
+"eth[0-9]", "#FF00FF"
+"ROOT LOGIN ", "#728C00"
+"invalid password", "#728C00"
+"invalid user", "#728C00"
+"Accepted password", "#728C00"
+"Failed password", "#728C00"
+"emhttp[:[_]", "#6698FF"
