Initial beta release.
Added color selection in settings.

--- a/source/default.cfg
+++ b/source/default.cfg
@@ -8,3 +8,13 @@ DEVICES="yes"
 NETWORK="yes"
 LOGIN="yes"
 EMHTTP="yes"
+ERRORS_CLR="IndianRed"
+MINOR_ISSUES_CLR="Orange"
+LIME_TECH_CLR="Lime"
+ARRAY_CLR="MediumSeaGreen"
+SYSTEM_CLR="Magenta"
+FILE_SYSTEM_CLR="LightGray"
+DEVICES_CLR="Teal"
+NETWORK_CLR="MediumPurple"
+LOGIN_CLR="Olive"
+EMHTTP_CLR="MediumSlateBlue"
