--- a/source/syslog.conf
+++ b/source/syslog.conf
@@ -1,131 +1,131 @@
 ": #.*","skip"
 ": \|.*", "skip"
-"(spinup|spindown)", "#B6B6B4"
-"reiserfs", "#B6B6B4"
-"xfs", "#B6B6B4"
-"btrfs", "#B6B6B4"
-"mkdir[ -p| ]\/mnt\/disk", "#B6B6B4"
-"scst_", "#B6B6B4"
-"sending DHCP_REQUEST for", "#B6B6B4"
-"dhcpIPaddrLeaseTime=[0-9]* in DHCP server response.", "#B6B6B4"
-"dhcpT[12]value is missing in DHCP server response.", "#B6B6B4"
-"DHCP_ACK received from", "#B6B6B4"
-": connect from [0-9.]*", "#B6B6B4"
-"ROOT LOGIN  on ", "#B6B6B4"
-"kernel:[ \t]*$", "#B6B6B4"
-"rdevNumErrors\.[0-9]*=0", "#B6B6B4"
-"sas eh calling libata port error handler", "#B6B6B4"
-"kvm:", "#B6B6B4"
-"docker[0-9]", "#B6B6B4"
-"[ \t]terror", "#FFBABA"
-"sas: ata[0-9].*dev error handler", "#4E8975"
-" ACPI Error ", "#FEEFB3"
-"ntpd.*Listening on interface", "#FF00FF"
-"checksumming", "#ADD8E6"
-"HPA detected: current [0-9]*168,", "#FFBABA"
-"kernel:  \[mem .* page ", "#FFBABA"
-"get value of subfeature", "#ADD8E6"
-"preclear_disk", "#B6B6B4"
-"error", "#FFBABA"
-"Emask ", "#FFBABA"
-"parity incorrect", "#FFBABA"
-"Fsck?", "#FFBABA"
-"invalid opcode: ", "#FFBABA"
-"nobody cared", "#FFBABA"
-"Unknown boot option", "#FFBABA"
-"ata[0-9\. ]+: disabled", "#FFBABA"
-"DMA disabled", "#FFBABA"
-"kernel BUG ", "#FFBABA"
-"Write Protect is on", "#FFBABA"
-"Call trace", "#FFBABA"
-"tainted", "#FFBABA"
-"kernel:  \[", "#FFBABA"
-"out[ _]of[ _]memory", "#FFBABA"
-"killed", "#FFBABA"
-"HPA detected: current [0-9]*055,", "#FFBABA"
-"ACPI Warning", "#FEEFB3"
-"ACPI Exception", "#FEEFB3"
-"spurious", "#FEEFB3"
-"HPA", "#FEEFB3"
-"Host Protected Area", "#FEEFB3"
-"invalid signature", "#FEEFB3"
-"(soft|hard) resetting ", "#FEEFB3"
-"failed[ ,]", "#FEEFB3"
-"errno=[^0]", "#FEEFB3"
-" limiting speed to (PIO|UDM)", "#FEEFB3"
-": replayed ", "#FEEFB3"
-"duplicate object", "#FEEFB3"
-" checksum", "#FEEFB3"
-"conflicts", "#FEEFB3"
-"warning", "#FEEFB3"
-"conflicts", "#FEEFB3"
-"kill", "#FEEFB3"
-"power failure", "#FEEFB3"
-"power is back", "#FEEFB3"
-": unRAID System", "#41A317"
-"Lime[ -]Tech", "#41A317"
-"key detected, registered", "#41A317"
-": Unregistered", "#41A317"
-"Linux version", "#ADD8E6"
-"MHz processor", "#ADD8E6"
-"CPU: Intel", "#ADD8E6"
-"CPU[0-9]: Intel", "#ADD8E6"
-"CPU: AMD", "#ADD8E6"
-"CPU[0-9]: AMD", "#ADD8E6"
-"kernel: Processors: ", "#ADD8E6"
-"kernel: Memory: ", "#ADD8E6"
-"kernel: SMP: ", "#ADD8E6"
-"B HIGHMEM ", "#ADD8E6"
-"LOWMEM ", "#ADD8E6"
-"md: xor using", "#ADD8E6"
-"BogoMIPS", "#ADD8E6"
-"kernel: Console: ", "#ADD8E6"
-" Thermal Zone", "#ADD8E6"
-" Adding [0-9]+k swap on ", "#ADD8E6"
-"Kernel command line:", "#ADD8E6"
-"_sse", "#ADD8E6"
-"found.*chip", "#ADD8E6"
-"controller", "#ADD8E6"
-"version ", "#ADD8E6"
-"mouse|speaker|KBD port|AUX port|PS\/2|keyboard]", "#ADD8E6"
-"driver", "#ADD8E6"
-"Device inventory:", "#4E8975"
-": pci-", "#4E8975"
-", ATA DISK drive", "#4E8975"
-"Direct-Access ", "#4E8975"
-" attached scsi disk", "#4E8975"
-" attached scsi removable disk", "#4E8975"
-"SATA link up ", "#4E8975"
-" md[0-9][:) ]", "#4E8975"
-" md1[0-9][:) ]", "#4E8975"
-" md2[0-9][:) ]", "#4E8975"
-" [sh]d[a-z]1[: ]", "#4E8975"
-"kernel:  [sh]d[a-z][: ]", "#4E8975"
-" ide[0-9]: [^B]", "#4E8975"
-"hdparm ", "#4E8975"
-"scsi |[^d]ata|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "#4E8975"
-"import disk[0-9]*: ", "#4E8975"
-"ncq", "#4E8975"
-" mdcmd ", "#00FF00"
-" md: ", "#00FF00"
-"super.dat ", "#00FF00"
-": running, size:", "#00FF00"
-"rc.inet1", "#FF00FF"
-"forcedeth", "#FF00FF"
-" r8169[ :]", "#FF00FF"
-" e1000[ :]", "#FF00FF"
-" e1000e[ :]", "#FF00FF"
-" sky2[ :]", "#FF00FF"
-" skge[ :]", "#FF00FF"
-" tg3[ :.]", "#FF00FF"
-" bcm5700[ :]", "#FF00FF"
-" sk98lin[ :]", "#FF00FF"
-"dhcp", "#FF00FF"
-"bond[0-9]", "#FF00FF"
-"eth[0-9]", "#FF00FF"
-"ROOT LOGIN ", "#728C00"
-"invalid password", "#728C00"
-"invalid user", "#728C00"
-"Accepted password", "#728C00"
-"Failed password", "#728C00"
-"emhttp[:[_]", "#6698FF"
+"(spinup|spindown)", "file system"
+"reiserfs", "file system"
+"xfs", "file system"
+"btrfs", "file system"
+"mkdir[ -p| ]\/mnt\/disk", "file system"
+"scst_", "file system"
+"sending DHCP_REQUEST for", "file system"
+"dhcpIPaddrLeaseTime=[0-9]* in DHCP server response.", "file system"
+"dhcpT[12]value is missing in DHCP server response.", "file system"
+"DHCP_ACK received from", "file system"
+": connect from [0-9.]*", "file system"
+"ROOT LOGIN  on ", "file system"
+"kernel:[ \t]*$", "file system"
+"rdevNumErrors\.[0-9]*=0", "file system"
+"sas eh calling libata port error handler", "file system"
+"kvm:", "file system"
+"docker[0-9]", "file system"
+"[ \t]terror", "error"
+"sas: ata[0-9].*dev error handler", "devices"
+" ACPI Error ", "minor issue"
+"ntpd.*Listening on interface", "network"
+"checksumming", "system"
+"HPA detected: current [0-9]*168,", "error"
+"kernel:  \[mem .* page ", "error"
+"get value of subfeature", "system"
+"preclear_disk", "file system"
+"error", "error"
+"Emask ", "error"
+"parity incorrect", "error"
+"Fsck?", "error"
+"invalid opcode: ", "error"
+"nobody cared", "error"
+"Unknown boot option", "error"
+"ata[0-9\. ]+: disabled", "error"
+"DMA disabled", "error"
+"kernel BUG ", "error"
+"Write Protect is on", "error"
+"Call trace", "error"
+"tainted", "error"
+"kernel:  \[", "error"
+"out[ _]of[ _]memory", "error"
+"killed", "error"
+"HPA detected: current [0-9]*055,", "error"
+"ACPI Warning", "minor issue"
+"ACPI Exception", "minor issue"
+"spurious", "minor issue"
+"HPA", "minor issue"
+"Host Protected Area", "minor issue"
+"invalid signature", "minor issue"
+"(soft|hard) resetting ", "minor issue"
+"failed[ ,]", "minor issue"
+"errno=[^0]", "minor issue"
+" limiting speed to (PIO|UDM)", "minor issue"
+": replayed ", "minor issue"
+"duplicate object", "minor issue"
+" checksum", "minor issue"
+"conflicts", "minor issue"
+"warning", "minor issue"
+"conflicts", "minor issue"
+"kill", "minor issue"
+"power failure", "minor issue"
+"power is back", "minor issue"
+": unRAID System", "lime tech"
+"Lime[ -]Tech", "lime tech"
+"key detected, registered", "lime tech"
+": Unregistered", "lime tech"
+"Linux version", "system"
+"MHz processor", "system"
+"CPU: Intel", "system"
+"CPU[0-9]: Intel", "system"
+"CPU: AMD", "system"
+"CPU[0-9]: AMD", "system"
+"kernel: Processors: ", "system"
+"kernel: Memory: ", "system"
+"kernel: SMP: ", "system"
+"B HIGHMEM ", "system"
+"LOWMEM ", "system"
+"md: xor using", "system"
+"BogoMIPS", "system"
+"kernel: Console: ", "system"
+" Thermal Zone", "system"
+" Adding [0-9]+k swap on ", "system"
+"Kernel command line:", "system"
+"_sse", "system"
+"found.*chip", "system"
+"controller", "system"
+"version ", "system"
+"mouse|speaker|KBD port|AUX port|PS\/2|keyboard]", "system"
+"driver", "system"
+"Device inventory:", "devices"
+": pci-", "devices"
+", ATA DISK drive", "devices"
+"Direct-Access ", "devices"
+" attached scsi disk", "devices"
+" attached scsi removable disk", "devices"
+"SATA link up ", "devices"
+" md[0-9][:) ]", "devices"
+" md1[0-9][:) ]", "devices"
+" md2[0-9][:) ]", "devices"
+" [sh]d[a-z]1[: ]", "devices"
+"kernel:  [sh]d[a-z][: ]", "devices"
+" ide[0-9]: [^B]", "devices"
+"hdparm ", "devices"
+"scsi |[^d]ata|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "devices"
+"import disk[0-9]*: ", "devices"
+"ncq", "devices"
+" mdcmd ", "array"
+" md: ", "array"
+"super.dat ", "array"
+": running, size:", "array"
+"rc.inet1", "network"
+"forcedeth", "network"
+" r8169[ :]", "network"
+" e1000[ :]", "network"
+" e1000e[ :]", "network"
+" sky2[ :]", "network"
+" skge[ :]", "network"
+" tg3[ :.]", "network"
+" bcm5700[ :]", "network"
+" sk98lin[ :]", "network"
+"dhcp", "network"
+"bond[0-9]", "network"
+"eth[0-9]", "network"
+"ROOT LOGIN ", "login"
+"invalid password", "login"
+"invalid user", "login"
+"Accepted password", "login"
+"Failed password", "login"
+"emhttp[:[_]", "emhttp"
