--- a/source/default.cfg
+++ b/source/default.cfg
@@ -8,13 +8,15 @@ DEVICES="yes"
 NETWORK="yes"
 LOGIN="yes"
 EMHTTP="yes"
-ERRORS_CLR="IndianRed"
-MINOR_ISSUES_CLR="Orange"
-LIME_TECH_CLR="Lime"
-ARRAY_CLR="MediumSeaGreen"
+OTHER="no"
+ERRORS_CLR="Salmon"
+MINOR_ISSUES_CLR="LemonChiffon"
+LIME_TECH_CLR="GreenYellow"
+ARRAY_CLR="MediumSpringGreen"
 SYSTEM_CLR="Magenta"
 FILE_SYSTEM_CLR="LightGray"
-DEVICES_CLR="Teal"
-NETWORK_CLR="MediumPurple"
-LOGIN_CLR="Olive"
-EMHTTP_CLR="MediumSlateBlue"
+DEVICES_CLR="LightSteelBlue"
+NETWORK_CLR="Violet"
+LOGIN_CLR="PaleGreen"
+EMHTTP_CLR="Aqua"
+OTHER_CLR="AliceBlue"
