--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -1,33 +1,26 @@
 ": #.*", "skip"
 ": \|.*", "skip"
 "(spinup|spindown)", "file system"
-"reiserfs", "file system"
-"xfs", "file system"
-"btrfs", "file system"
+"(reiserfs|xfs|btrfs)", "file system"
 "mkdir[ -p| ]\/mnt\/disk", "file system"
 "scst_", "file system"
 "sending DHCP_REQUEST for", "file system"
 "dhcpIPaddrLeaseTime=[0-9]* in DHCP server response.", "file system"
 "dhcpT[12]value is missing in DHCP server response.", "file system"
 "DHCP_ACK received from", "file system"
-": connect from [0-9.]*", "file system"
-"ROOT LOGIN  on ", "file system"
 "kernel:[ \t]*$", "file system"
 "rdevNumErrors\.[0-9]*=0", "file system"
 "sas eh calling libata port error handler", "file system"
-"kvm:", "file system"
-"docker[0-9]", "file system"
+"(kvm:|docker[0-9])", "file system"
 "[ \t]terror", "error"
 "sas: ata[0-9].*dev error handler", "devices"
-" ACPI Error ", "minor issue"
 "ntpd.*Listening on interface", "network"
 "checksumming", "system"
 "HPA detected: current [0-9]*168,", "error"
 "kernel:  \[mem .* page ", "error"
 "get value of subfeature", "system"
 "preclear_disk", "file system"
-"error", "error"
-"Emask ", "error"
+"(error|Emask )", "error"
 "parity incorrect", "error"
 "Fsck?", "error"
 "invalid opcode: ", "error"
@@ -43,8 +36,7 @@
 "out[ _]of[ _]memory", "error"
 "killed", "error"
 "HPA detected: current [0-9]*055,", "error"
-"ACPI Warning", "minor issue"
-"ACPI Exception", "minor issue"
+"(ACPI Warning|ACPI Exception|ACPI Error)", "minor issue"
 "spurious", "minor issue"
 "HPA", "minor issue"
 "Host Protected Area", "minor issue"
@@ -121,11 +113,7 @@
 " bcm5700[ :]", "network"
 " sk98lin[ :]", "network"
 "dhcp", "network"
-"bond[0-9]", "network"
-"eth[0-9]", "network"
-"ROOT LOGIN ", "login"
-"invalid password", "login"
-"invalid user", "login"
-"Accepted password", "login"
-"Failed password", "login"
+"(bond[0-9]|eth[0-9])", "network"
+": connect from [0-9.]*", "login"
+"(invalid password|invalid user|Accepted password)", "login"
 "emhttp[:[_]", "emhttp"
