--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -1,41 +1,9 @@
-": #.*", "skip"
-": \|.*", "skip"
-"(spinup|spindown)", "file system"
-"(reiserfs|xfs|btrfs)", "file system"
-"mkdir[ -p| ]\/mnt\/disk", "file system"
-"scst_", "file system"
-"sending DHCP_REQUEST for", "file system"
-"dhcpIPaddrLeaseTime=[0-9]* in DHCP server response.", "file system"
-"dhcpT[12]value is missing in DHCP server response.", "file system"
-"DHCP_ACK received from", "file system"
-"kernel:[ \t]*$", "file system"
-"rdevNumErrors\.[0-9]*=0", "file system"
-"sas eh calling libata port error handler", "file system"
-"(kvm:|docker[0-9])", "file system"
-"[ \t]terror", "error"
-"sas: ata[0-9].*dev error handler", "devices"
-"ntpd.*Listening on interface", "network"
-"checksumming", "system"
-"HPA detected: current [0-9]*168,", "error"
-"kernel:  \[mem .* page ", "error"
-"get value of subfeature", "system"
-"preclear_disk", "file system"
-"(error|Emask )", "error"
-"parity incorrect", "error"
-"Fsck?", "error"
-"invalid opcode: ", "error"
-"nobody cared", "error"
-"Unknown boot option", "error"
-"ata[0-9\. ]+: disabled", "error"
-"DMA disabled", "error"
-"kernel BUG ", "error"
-"Write Protect is on", "error"
-"Call trace", "error"
-"tainted", "error"
-"kernel:  \[", "error"
-"out[ _]of[ _]memory", "error"
-"killed", "error"
-"HPA detected: current [0-9]*055,", "error"
+"logger: [|+ #-]", "skip"
+"non[ -]fatal error", "skip"
+"correct gpt errors", "skip"
+": connect from [0-9.]*", "login"
+"sshd\[\d+\]:", "login"
+"(invalid password|invalid user|accepted password|failed password)", "login"
 "(ACPI Warning|ACPI Exception|ACPI Error)", "minor issue"
 "spurious", "minor issue"
 "HPA", "minor issue"
@@ -52,12 +20,31 @@
 "warning", "minor issue"
 "conflicts", "minor issue"
 "kill", "minor issue"
-"power failure", "minor issue"
 "power is back", "minor issue"
-": unRAID System", "lime tech"
-"Lime[ -]Tech", "lime tech"
-"key detected, registered", "lime tech"
-": Unregistered", "lime tech"
+"[ \t]terror", "error"
+"HPA detected: current [0-9]*168,", "error"
+"kernel:  \[mem .* page ", "error"
+"(error|Emask )", "error"
+"parity incorrect", "error"
+"Fsck\?", "error"
+"invalid opcode: ", "error"
+"nobody cared", "error"
+"Unknown boot option", "error"
+"ata[0-9\. ]+: disabled", "error"
+"DMA disabled", "error"
+"kernel BUG ", "error"
+"Write Protect is on", "error"
+"Call trace", "error"
+"tainted", "error"
+"kernel:  \[", "error"
+"out[ _]of[ _]memory", "error"
+"killed", "error"
+"HPA detected: current [0-9]*055,", "error"
+"power failure", "error"
+"checksumming", "system"
+"throttling rate", "system"
+"get value of subfeature", "system"
+"preclear_disk", "file system"
 "Linux version", "system"
 "MHz processor", "system"
 "CPU: Intel", "system"
@@ -78,9 +65,14 @@
 "_sse", "system"
 "found.*chip", "system"
 "controller", "system"
-"version ", "system"
+" version ", "system"
 "mouse|speaker|KBD port|AUX port|PS\/2|keyboard]", "system"
 "driver", "system"
+" mdcmd ", "array"
+" md: ", "array"
+"super.dat ", "array"
+": running, size:", "array"
+"sas: ata[0-9].*dev error handler", "devices"
 "Device inventory:", "devices"
 ": pci-", "devices"
 ", ATA DISK drive", "devices"
@@ -98,10 +90,19 @@
 "scsi |[^d]ata|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "devices"
 "import disk[0-9]*: ", "devices"
 "ncq", "devices"
-" mdcmd ", "array"
-" md: ", "array"
-"super.dat ", "array"
-": running, size:", "array"
+"(spinup|spindown)", "file system"
+"(reiserfs|xfs|btrfs)", "file system"
+"mkdir.*\/mnt\/(disk|cache)", "file system"
+"scst_", "file system"
+"sending DHCP_REQUEST for", "file system"
+"dhcpIPaddrLeaseTime=[0-9]* in DHCP server response.", "file system"
+"dhcpT[12]value is missing in DHCP server response.", "file system"
+"DHCP_ACK received from", "file system"
+"kernel:[ \t]*$", "file system"
+"rdevNumErrors\.[0-9]*=0", "file system"
+"sas eh calling libata port error handler", "file system"
+"(kvm:|docker[0-9])", "file system"
+"ntpd.*Listening on interface", "network"
 "rc.inet1", "network"
 "forcedeth", "network"
 " r8169[ :]", "network"
@@ -114,6 +115,8 @@
 " sk98lin[ :]", "network"
 "dhcp", "network"
 "(bond[0-9]|eth[0-9])", "network"
-": connect from [0-9.]*", "login"
-"(invalid password|invalid user|Accepted password)", "login"
+": unRAID System", "lime tech"
+"Lime[ -]Tech", "lime tech"
+"key detected, registered", "lime tech"
+": Unregistered", "lime tech"
 "emhttp[:[_]", "emhttp"
