--- a/source/default.cfg
+++ b/source/default.cfg
@@ -19,4 +19,4 @@ DEVICES_CLR="LightSteelBlue"
 NETWORK_CLR="Violet"
 LOGIN_CLR="PaleGreen"
 EMHTTP_CLR="Aqua"
-OTHER_CLR="AliceBlue"
+OTHER_CLR="PowderBlue"
