--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -6,8 +6,6 @@
 "(invalid password|invalid user|accepted password|failed password)", "login"
 "(ACPI Warning|ACPI Exception|ACPI Error)", "minor issue"
 "spurious", "minor issue"
-"HPA", "minor issue"
-"Host Protected Area", "minor issue"
 "invalid signature", "minor issue"
 "(soft|hard) resetting ", "minor issue"
 "failed[ ,]", "minor issue"
@@ -40,6 +38,7 @@
 "out[ _]of[ _]memory", "error"
 "killed", "error"
 "HPA detected: current [0-9]*055,", "error"
+"(HPA|Host Protected Area)", "minor issue"
 "power failure", "error"
 "checksumming", "system"
 "throttling rate", "system"
