Initial beta release.
Modified colors, set "emhttp" default off, changed "devices" to "drive
related"..

--- a/source/default.cfg
+++ b/source/default.cfg
@@ -1,22 +1,23 @@
+TEXT="yes"
 ERRORS="yes"
 MINOR_ISSUES="yes"
 LIME_TECH="yes"
 ARRAY="yes"
 SYSTEM="yes"
 FILE_SYSTEM="yes"
-DEVICES="yes"
+DRIVE_RELATED="yes"
 NETWORK="yes"
 LOGIN="yes"
-EMHTTP="yes"
+EMHTTP="no"
 OTHER="no"
-ERRORS_CLR="Salmon"
+ERRORS_CLR="HotPink"
 MINOR_ISSUES_CLR="LemonChiffon"
-LIME_TECH_CLR="GreenYellow"
-ARRAY_CLR="MediumSpringGreen"
-SYSTEM_CLR="Magenta"
-FILE_SYSTEM_CLR="LightGray"
-DEVICES_CLR="LightSteelBlue"
-NETWORK_CLR="Violet"
-LOGIN_CLR="PaleGreen"
-EMHTTP_CLR="Aqua"
-OTHER_CLR="PowderBlue"
+LIME_TECH_CLR="LimeGreen"
+ARRAY_CLR="HoneyDew"
+SYSTEM_CLR="LightGreen"
+FILE_SYSTEM_CLR="Gainsboro"
+DRIVE_RELATED_CLR="AliceBlue"
+NETWORK_CLR="Thistle"
+LOGIN_CLR="Lavender"
+EMHTTP_CLR="Azure"
+OTHER_CLR="SeaShell"
