--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -19,6 +19,7 @@
 "conflicts", "minor issue"
 "kill", "minor issue"
 "power is back", "minor issue"
+"UPS self test", "minor issue"
 "[ \t]terror", "error"
 "HPA detected: current [0-9]*168,", "error"
 "kernel:  \[mem .* page ", "error"
@@ -71,26 +72,26 @@
 " md: ", "array"
 "super.dat ", "array"
 ": running, size:", "array"
-"sas: ata[0-9].*dev error handler", "devices"
-"Device inventory:", "devices"
-": pci-", "devices"
-", ATA DISK drive", "devices"
-"Direct-Access ", "devices"
-" attached scsi disk", "devices"
-" attached scsi removable disk", "devices"
-"SATA link up ", "devices"
-" md[0-9][:) ]", "devices"
-" md1[0-9][:) ]", "devices"
-" md2[0-9][:) ]", "devices"
-" [sh]d[a-z]1[: ]", "devices"
-"kernel:  [sh]d[a-z][: ]", "devices"
-" ide[0-9]: [^B]", "devices"
-"hdparm ", "devices"
-"scsi |[^d]ata|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "devices"
-"import disk[0-9]*: ", "devices"
-"ncq", "devices"
+"sas: ata[0-9].*dev error handler", "drive related"
+"Device inventory:", "drive related"
+": pci-", "drive related"
+", ATA DISK drive", "drive related"
+"Direct-Access ", "drive related"
+" attached scsi disk", "drive related"
+" attached scsi removable disk", "drive related"
+"SATA link up ", "drive related"
+" md[0-9][:) ]", "drive related"
+" md1[0-9][:) ]", "drive related"
+" md2[0-9][:) ]", "drive related"
+" [sh]d[a-z]1[: ]", "drive related"
+"kernel:  [sh]d[a-z][: ]", "drive related"
+" ide[0-9]: [^B]", "drive related"
+"hdparm ", "drive related"
+"scsi |[^d]ata|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "drive related"
+"import disk[0-9]*: ", "drive related"
+"ncq", "drive related"
 "(spinup|spindown)", "file system"
-"(reiserfs|xfs|btrfs)", "file system"
+"(reiserfs|xfs|btrfs|ext4)", "file system"
 "mkdir.*\/mnt\/(disk|cache)", "file system"
 "scst_", "file system"
 "sending DHCP_REQUEST for", "file system"
@@ -114,6 +115,7 @@
 " sk98lin[ :]", "network"
 "dhcp", "network"
 "(bond[0-9]|eth[0-9])", "network"
+"vnet[0-9]", "network"
 ": unRAID System", "lime tech"
 "Lime[ -]Tech", "lime tech"
 "key detected, registered", "lime tech"
