--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -23,7 +23,7 @@
 "[ \t]terror", "error"
 "HPA detected: current [0-9]*168,", "error"
 "kernel:  \[mem .* page ", "error"
-"(error|Emask )", "error"
+"(error:|Emask )", "error"
 "parity incorrect", "error"
 "Fsck\?", "error"
 "invalid opcode: ", "error"
@@ -34,7 +34,7 @@
 "kernel BUG ", "error"
 "Write Protect is on", "error"
 "Call trace", "error"
-"tainted", "error"
+"tainted:", "error"
 "kernel:  \[", "error"
 "out[ _]of[ _]memory", "error"
 "killed", "error"
