--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -2,8 +2,9 @@
 "non[ -]fatal error", "skip"
 "correct gpt errors", "skip"
 ": connect from [0-9.]*", "login"
+"accepted password", "login"
+"(invalid (password|user)|failed password)", "minor issue"
 "sshd\[\d+\]:", "login"
-"(invalid password|invalid user|accepted password|failed password)", "login"
 "(ACPI Warning|ACPI Exception|ACPI Error)", "minor issue"
 "spurious", "minor issue"
 "invalid signature", "minor issue"
@@ -15,7 +16,7 @@
 "duplicate object", "minor issue"
 " checksum", "minor issue"
 "conflicts", "minor issue"
-"warning", "minor issue"
+"(warning|warn:)", "minor issue"
 "conflicts", "minor issue"
 "kill", "minor issue"
 "power is back", "minor issue"
@@ -23,7 +24,7 @@
 "[ \t]terror", "error"
 "HPA detected: current [0-9]*168,", "error"
 "kernel:  \[mem .* page ", "error"
-"(error:|Emask )", "error"
+"(error[ :]|Emask )", "error"
 "parity incorrect", "error"
 "Fsck\?", "error"
 "invalid opcode: ", "error"
