--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -1,6 +1,8 @@
 "logger: [|+ #-]", "skip"
 "non[ -]fatal error", "skip"
 "correct gpt errors", "skip"
+"dev error handler", "skip"
+"not tainted", "skip"
 ": connect from [0-9.]*", "login"
 "accepted password", "login"
 "(invalid (password|user)|failed password)", "minor issue"
