--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -22,7 +22,7 @@
 "conflicts", "minor issue"
 "(warning|warn:)", "minor issue"
 "conflicts", "minor issue"
-"kill", "minor issue"
+"killall", "minor issue"
 "power is back", "minor issue"
 "UPS self test", "minor issue"
 "[ \t]terror", "error"
