Updates for unRAID 6.4

--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -44,6 +44,7 @@
 "out[ _]of[ _]memory", "error"
 "killed", "error"
 "HPA detected: current [0-9]*055,", "error"
+"password mismatch", "error"
 "(HPA|Host Protected Area)", "minor issue"
 "power failure", "error"
 "throttling rate", "system"
@@ -106,6 +107,7 @@
 "sas eh calling libata port error handler", "file system"
 "(kvm:|docker[0-9])", "file system"
 "ntpd.*Listening on interface", "network"
+": Listen normally on", "network"
 "rc.inet1", "network"
 "forcedeth", "network"
 " r8169[ :]", "network"
@@ -117,8 +119,8 @@
 " bcm5700[ :]", "network"
 " sk98lin[ :]", "network"
 "dhcp", "network"
-"(bond[0-9]|eth[0-9])", "network"
-"vnet[0-9]", "network"
+"dnsmasq", "network"
+"(bond[0-9]|eth[0-9]|vnet[0-9])", "network"
 ": unRAID System", "lime tech"
 "Lime[ -]Tech", "lime tech"
 "key detected, registered", "lime tech"
