Additional event match strings

--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -45,6 +45,7 @@
 "killed", "error"
 "HPA detected: current [0-9]*055,", "error"
 "password mismatch", "error"
+"unable to open primary script:", "error"
 "(HPA|Host Protected Area)", "minor issue"
 "power failure", "error"
 "throttling rate", "system"
