Fix 'failed' string for UD

--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -12,7 +12,7 @@
 "spurious", "minor issue"
 "invalid signature", "minor issue"
 "(soft|hard) resetting ", "minor issue"
-" failed[ ,]", "minor issue"
+" failed[ ,:]", "minor issue"
 "errno=[^0]", "minor issue"
 " limiting speed to (PIO|UDM)", "minor issue"
 ": replayed ", "minor issue"
