Add microcode to match strings

--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -73,6 +73,7 @@
 " version ", "system"
 "mouse|speaker|KBD port|AUX port|PS\/2|keyboard]", "system"
 "driver", "system"
+"microcode","system"
 " mdcmd ", "array"
 " md: ", "array"
 "super.dat ", "array"
