Change default colors to be more compatible with dark theme

--- a/source/default.cfg
+++ b/source/default.cfg
@@ -10,14 +10,14 @@ NETWORK="yes"
 LOGIN="yes"
 EMHTTP="no"
 OTHER="no"
-ERRORS_CLR="HotPink"
-MINOR_ISSUES_CLR="LemonChiffon"
+ERRORS_CLR="IndianRed"
+MINOR_ISSUES_CLR="LightCoral"
 LIME_TECH_CLR="LimeGreen"
-ARRAY_CLR="HoneyDew"
-SYSTEM_CLR="LightGreen"
-FILE_SYSTEM_CLR="Gainsboro"
-DRIVE_RELATED_CLR="AliceBlue"
-NETWORK_CLR="Thistle"
-LOGIN_CLR="Lavender"
-EMHTTP_CLR="Azure"
-OTHER_CLR="SeaShell"
+ARRAY_CLR="DarkSeaGreen"
+SYSTEM_CLR="Gray"
+FILE_SYSTEM_CLR="Fuchsia"
+DRIVE_RELATED_CLR="CornFlowerBlue"
+NETWORK_CLR="Violet"
+LOGIN_CLR="LightSalmon"
+EMHTTP_CLR="CadetBlue"
+OTHER_CLR="SeaGreen"
