Fix some highlighting issues

--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -104,9 +104,10 @@
 "dhcpIPaddrLeaseTime=[0-9]* in DHCP server response.", "file system"
 "dhcpT[12]value is missing in DHCP server response.", "file system"
 "DHCP_ACK received from", "file system"
-"kernel:[ \t]*$", "file system"
+"kernel:[ \t]*$", "system"
 "rdevNumErrors\.[0-9]*=0", "file system"
 "sas eh calling libata port error handler", "file system"
+"(entered blocking state|entered disabled state|entered forwarding state)", "network"
 "(kvm:|docker[0-9])", "file system"
 "ntpd.*Listening on interface", "network"
 ": Listen normally on", "network"
