Fix additional highlighting issues

--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -4,7 +4,7 @@
 "dev error handler", "skip"
 "not tainted", "skip"
 ": connect from [0-9.]*", "login"
-"accepted password", "login"
+"(accepted password|ROOT LOGIN)", "login"
 "preclear_disk", "file system"
 "(invalid (password|user)|failed password)", "minor issue"
 "sshd\[\d+\]:", "login"
@@ -13,6 +13,7 @@
 "invalid signature", "minor issue"
 "(soft|hard) resetting ", "minor issue"
 " failed[ ,:]", "minor issue"
+"prematurely closed", "minor issue"
 "errno=[^0]", "minor issue"
 " limiting speed to (PIO|UDM)", "minor issue"
 ": replayed ", "minor issue"
@@ -32,10 +33,10 @@
 "parity incorrect", "error"
 "Fsck\?", "error"
 "invalid opcode: ", "error"
-"nobody cared", "error"
+"nobody cared", "warning"
 "Unknown boot option", "error"
 "ata[0-9\. ]+: disabled", "error"
-"DMA disabled", "error"
+"(DMA disabled|exit status 1 from user root)", "error"
 "kernel BUG ", "error"
 "Write Protect is on", "error"
 "Call trace", "error"
@@ -95,7 +96,7 @@
 "hdparm ", "drive related"
 "scsi |[^d]ata|sas |ahci |[^a-z0-9]sd[a-z][^a-z]|usb", "drive related"
 "import disk[0-9]*: ", "drive related"
-"ncq", "drive related"
+"(ncq|trimmed on)", "drive related"
 "(spinup|spindown)", "file system"
 "(reiserfs|xfs|btrfs|ext4)", "file system"
 "mkdir.*\/mnt\/(disk|cache)", "file system"
@@ -107,7 +108,9 @@
 "kernel:[ \t]*$", "system"
 "rdevNumErrors\.[0-9]*=0", "file system"
 "sas eh calling libata port error handler", "file system"
-"(entered blocking state|entered disabled state|entered forwarding state)", "network"
+"(entered blocking state|entered disabled state|entered forwarding state|entered listening state)", "network"
+"(promiscuous mode|link is not ready|link becomes ready)", "network"
+"(New relevant interface|no longer relevant|mDNS multicast|address record)", "network"
 "(kvm:|docker[0-9])", "file system"
 "ntpd.*Listening on interface", "network"
 ": Listen normally on", "network"
