Additional match strings

--- a/source/syslog_match.conf
+++ b/source/syslog_match.conf
@@ -45,7 +45,7 @@
 "out[ _]of[ _]memory", "error"
 "killed", "error"
 "HPA detected: current [0-9]*055,", "error"
-"password mismatch", "error"
+"(password mismatch|was not found in )", "error"
 "unable to open primary script:", "error"
 "(HPA|Host Protected Area)", "minor issue"
 "power failure", "error"
